let sidebar menu stay, not scroll

--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -1,5 +1,5 @@
 .left-nav
-  .row.hidden-phone
+  .row.hidden-phone{ :"data-spy" => "affix", :"data-offset" => '0', width: "25%"}
     .span3
       %ul.nav.nav-pills.nav-stacked
         - t = Time.new
