add sleep to daily entries

--- a/app/views/daily_entries/_form.html.haml
+++ b/app/views/daily_entries/_form.html.haml
@@ -15,7 +15,10 @@
       .field.label-field= f.label t(:weight)
       .field= f.number_field :weight, class: "number-field"
       
-      
+    .fieldset
+      .field.label-field= f.label t(:sleep)
+      .field= f.number_field :sleep, class: "number-field", value: 8
+        
     .fieldset
       .field.label-field= f.label t(:emotion_degree)
       .field
