--- a/app/views/periodicals/day.html.haml
+++ b/app/views/periodicals/day.html.haml
@@ -38,7 +38,10 @@
           %i.icon-plus.icon-white
     .row  
     .whitebox
-      %h2 Deine heutigen Schmerzeinträge
+      %h2 
+        Deine heutigen Schmerzeinträge
+        = link_to new_pain_entry_path(date: @date.to_date), class: "btn btn-primary btn-small new-entry pull-right" do
+          %i.icon-plus.icon-white
       %table.table
         %tbody
           - if @pain_entries.count == 0
@@ -55,11 +58,12 @@
                       %i.icon-edit.icon-white
                     =link_to pain_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small", remote: true do
                       %i.icon-trash.icon-white
-      = link_to new_pain_entry_path(date: @date.to_date), class: "btn btn-primary new-entry" do
-        Neuer Eintrag
     .row  
     .whitebox        
-      %h2 Meine heutigen Behandlungseinträge
+      %h2 
+        Deine heutigen Behandlungseinträge
+        = link_to new_therapy_entry_path(date: @date.to_date), class: "btn btn-primary new-entry btn-small pull-right" do
+          %i.icon-plus.icon-white
       %table.table
         %tbody
           - if @therapy_entries.count == 0
@@ -76,9 +80,29 @@
                       %i.icon-edit.icon-white
                     =link_to therapy_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small", remote: true do
                       %i.icon-trash.icon-white
-            
-      = link_to new_therapy_entry_path(date: @date.to_date), class: "btn btn-primary new-entry" do
-        Neuer Eintrag
+    .row  
+    .whitebox        
+      %h2 
+        Deine heutigen Medikationseinträge
+        = link_to new_medication_entry_path(date: @date.to_date), class: "btn btn-primary new-entry btn-small pull-right" do
+          %i.icon-plus.icon-white
+      %table.table
+        %tbody
+          - if !@medication_entries
+            %tr
+              %td Keine Medikation
+              %td
+          - else
+            - @medication_entries.each do |medication_entry|
+              %tr{ id: "medication_entries_row_#{medication_entry.id}" }   
+                %td=link_to medication_entry.name, edit_medication_entry_path(medication_entry)
+                %td.actions
+                  .btn-group.pull-right
+                    =link_to edit_medication_entry_path(medication_entry), class: "btn btn-primary btn-small" do
+                      %i.icon-edit.icon-white
+                    =link_to medication_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small", remote: true do
+                      %i.icon-trash.icon-white
+    
         
 .row
   .span9.pagination-centered
